infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-client
  template:
    metadata:
      labels:
        app: ticketing-client
    spec:
      containers:
        - name: ticketing-client
          image: johndoeups/ticketing-client

---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-client-srv
spec:
  selector:
    app: ticketing-client
  type: ClusterIP
  ports:
    - name: ticketing-client
      protocol: TCP
      port: 3000
      targetPort: 3000
