infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: johndoeups/tickets
          env: # see cmd kubectl create secret generic <SECRETE_NAME_HERE_FOR_K8> --from-literal=<KEY_NAME_HERE> = <SECRET_HERE>
            - name: MONGO_URI
              value: 'mongodb://tickets-mongo-srv:27017/tickets'
            - name: JWT_KEY # Provides a name for ENV variable for container. This name will be referred inside auth app.
              valueFrom:
                secretKeyRef:
                  name: jwt-secret # secret name in k8.
                  key: JWT_KEY # key name of the actual key value pair of secret
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  type: ClusterIP
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
