infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: ticketing.com
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service: # cluster ip service to reach out to
                name: auth-srv
                port:
                  number: 3000
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service: # cluster ip service to reach out to
                name: tickets-srv
                port:
                  number: 3000
          - path: /?(.*) # This is a catch all regex. This must alway be at the very bottom.
            pathType: Prefix
            backend:
              service: # cluster ip service to reach out to
                name: ticketing-client-srv
                port:
                  number: 3000
